@@ -102,6 +102,7 @@ CFG_CATEGORIES(Ui,
         CFG_ENTRY(int,                   InsertRowPlacement,         Cfg::BEFORE_CURRENT)
         CFG_ENTRY(bool,                  ShowDataViewTooltips,       true)
         CFG_ENTRY(bool,                  KeepNullWhenEmptyValue,     true)
+        CFG_ENTRY(bool,                  UseDefaultValueForNull,     false)
     )
 )
 
